package routing

import "github.com/gofiber/fiber/v2"

type HTTPContext struct {
	*fiber.Ctx
}
